samples/_failures_safe/1761634707_979e7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d44f056.c: In function ‘main’:
./samples/SAFE/__tmp_7d44f056.c:147:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  147 |     uint8_t decomp
      |     ^~~~~~~
./samples/SAFE/__tmp_7d44f056.c:147:5: error: expected declaration or statement at end of input
